updating some features

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="profile-discription">
                 <h1>Itz rahul / <strong>Video Editor</strong></h1>
-                <p>I’m Rahul, a freelance Video Editor specializing in <span>Motion Graphics, Perfect Cuts, Sound Design, 3D Elements</span>, and my favorite - <span>Documentary-Style</span> Editing.</p>
+                <p>🎥 Creative Video Editor | Helping <span>content creators</span> & <span>business coaches</span> grow faster ✂ Clean cuts · Smooth flow · Professional touch ⚡ <span>Let’s collaborate</span> – Free sample available.</p>
             </div>
         </section>
 
@@ -42,7 +42,7 @@
 
   <div class="social-link twitter">
     <i class="fa-brands fa-x-twitter"></i>
-    <a href="https://x.com/Itz_Rahul028" target="_blank">X (Twitter)</a>
+    <a href="https://x.com/unixeditor" target="_blank">X (Twitter)</a>
   </div>
 
   <div class="social-link threads">
@@ -52,7 +52,7 @@
 
   <div class="social-link reddit">
     <i class="fa-brands fa-reddit-alien"></i>
-    <a href="#" target="_blank">Reddit</a>
+    <a href="https://www.reddit.com/user/Stock-Shift-1150/" target="_blank">Reddit</a>
   </div>
 
   <div class="social-link linkedin">
@@ -66,6 +66,17 @@
   </div>
 
 </section>
+
+
+ <div class="social-icons">
+      <i class="fa-solid fa-briefcase" id="particle-portfolio"></i>
+      <i class="fa-brands fa-instagram" id="particle-instagram"></i>
+      <i class="fa-brands fa-x-twitter" id="particle-twitter"></i>
+      <i class="fa-brands fa-threads" id="particle-threads"></i>
+      <i class="fa-brands fa-reddit-alien" id="particle-reddit"></i>
+      <i class="fa-brands fa-linkedin" id="particle-linkedin"></i>
+      <i class="fa-solid fa-envelope" id="particle-email"></i>
+    </div>
 
     <p id="copy-right">&copy 2025 | &hearts; Itz rahul</p>
 
