--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
 
             <div class="profile-discription">
-                <h1>Itz rahul / <strong>Video Editor</strong></h1>
-                <p>🎥 Creative Video Editor | Helping <span>content creators</span> & <span>business coaches</span> grow faster ✂ Clean cuts · Smooth flow · Professional touch ⚡ <span>Let’s collaborate</span> – Free sample available.</p>
+                <h1>Itz Rahul / <strong>Video Editor</strong></h1>
+                <p>🎥 Creative Video Editor | Helping <span>content creators</span> & <span>business coaches</span> grow faster ✂ Clean cuts · Smooth flow · Professional touch ⚡ <span>Let’s collaborate</span> – Free 15s sample available.</p>
             </div>
         </section>
 
