update bg video

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 
 <body>
     <main id="main-container">
+
+      <div class="bg-video">
+        <video autoplay muted inlineplay loop src="video/Google SaaS Edit 7.mp4"></video>
+      </div>
+
+      <!-- <div class="bg-image">
+        <img src="images/premier pro.jpeg" alt="premier pro how i edit">
+      </div> -->
         <section class="profile">
             <div class="profile-img">
                 <img class="image" src="images/rahul profile.webp" alt="Rahul profile Image" loading="lazy" decoding="async">
